--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,11 @@
   <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>-->
   <!--<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>-->
   <!--<script src="http://192.168.0.131:3001/socket.io/socket.io.js"></script>-->
+  <!-- Compiled and minified CSS -->
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
